5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4014/executions/1573_1332.log
== SUBMITION (2019-03-11 15:36:53) 
-- CODE:
aresta =5
area = 3/2 1**(1/2)a**2
 
print(round(area, 4))
-- EXECUTION TIME:
0.140998
-- ERROR:
  File "/home/codebench/codes/1573/1332/main.py", line 2
    area = 3/2 1**(1/2)a**2
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:36:55) 
-- CODE:
aresta =5
area = 3/2 1**(1/2)a**2
 
print(round(area, 4))
-- EXECUTION TIME:
0.206124
-- ERROR:
  File "/home/codebench/codes/1573/1332/main.py", line 2
    area = 3/2 1**(1/2)a**2
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:37:19) 
-- CODE:
aresta =5
area =32√3a2
 
print(round(area, 4))
-- EXECUTION TIME:
0.14104
-- ERROR:
  File "/home/codebench/codes/1573/1332/main.py", line 2
    area =32\u221a3a2
               ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:37:41) 
-- CODE:
aresta =5
area =32√3a^2
 
print(round(area, 4))
-- EXECUTION TIME:
0.156703
-- ERROR:
  File "/home/codebench/codes/1573/1332/main.py", line 2
    area =32\u221a3a^2
              ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:38:11) 
-- CODE:
aresta =5
area =3/2√3a^2
 
print(round(area, 4))
-- EXECUTION TIME:
0.186567
-- ERROR:
  File "/home/codebench/codes/1573/1332/main.py", line 2
    area =3/2\u221a3a^2
               ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:46:37) 
-- CODE:
aresta=5
area=3/2*(3**0.5)*5**2
 
print(round(area, 4))
-- OUTPUT:
64.9519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:46:38) 
-- CODE:
aresta=5
area=3/2*(3**0.5)*5**2
 
print(round(area, 4))
-- EXECUTION TIME:
0.152224
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
64.9519
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
